feat: api update for jdk 21
BREAKING CHANGE: